--- a/SATPairedProgramming/SAT.UI.MVC/Views/Home/Index.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/Home/Index.cshtml
@@ -287,7 +287,7 @@
                         <h4>Web Development</h4>
                         <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.</p>
                         <div class="author-image">
-                            <img src="~/Content/~/Content/assets/images/author-02.png" alt="">
+                            <img src="~/Content/assets/images/author-02.png" alt="">
                         </div>
                         <div class="text-button-free">
                             <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
