--- a/SATPairedProgramming/SAT.UI.MVC/Views/Enrollments/Index.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/Enrollments/Index.cshtml
@@ -12,42 +12,44 @@
         @Html.ActionLink("Create New", "Create")
     </p>
 }
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.EnrollmentDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ScheduledClass.InstructorName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Student.FullName)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<table class="table" id="table_id">
+    <thead>
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.EnrollmentDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ScheduledClass.InstructorName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Student.FullName)
-            </td>
-            <td>
-                @Html.ActionLink("Details", "Details", new { id = item.ScheduledClassId })
-                @if (User.IsInRole("Admin, Scheduler"))
-                {
-                    <span>|</span>
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ScheduledClassId }) <span>|</span>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ScheduledClassId })
-                }
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.EnrollmentDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ScheduledClass.FullCourseInfo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Student.FullName)
+            </th>
+            <th></th>
         </tr>
-    }
-
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EnrollmentDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ScheduledClass.FullCourseInfo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Student.FullName)
+                </td>
+                <td>
+                    @Html.ActionLink("Details", "Details", new { id = item.ScheduledClassId })
+                    @if (User.IsInRole("Admin, Scheduler"))
+                    {
+                        <span>|</span>
+                        @Html.ActionLink("Delete", "Delete", new { id = item.ScheduledClassId }) <span>|</span>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.ScheduledClassId })
+                    }
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
