--- a/SATPairedProgramming/SAT.UI.MVC/Views/RolesAdmin/Index.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/RolesAdmin/Index.cshtml
@@ -12,33 +12,35 @@
         @Html.ActionLink("Create New", "Create")
     </p>
 }
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
+    <table class="table" id="table_id">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
 
-        </th>
-    </tr>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                
-                @Html.ActionLink("Details", "Details", new { id = item.Id })
-                @if (User.IsInRole("Admin"))
-                {
-                    <span>|</span>
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }) <span>|</span>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                }
-            </td>
-        </tr>
-    }
-
-</table>
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <span>|</span>
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }) <span>|</span>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                    }
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
