--- a/SATPairedProgramming/SAT.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/Shared/_Layout.cshtml
@@ -11,9 +11,11 @@
     <meta name="description" content="Super Awesome College Website Stuff">
     <meta name="author" content="Chad Way, Deborah Reed">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.22/b-1.6.5/b-colvis-1.6.5/sp-1.2.1/datatables.min.css" />
-
     <title>Super Awesome College Website</title>
+
+    <!--datatables script-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.22/b-1.6.5/b-colvis-1.6.5/sp-1.2.1/datatables.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
 
     <!-- Bootstrap core CSS -->
     <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,6 +25,7 @@
     <link rel="stylesheet" href="~/Content/assets/css/templatemo-grad-school.css">
     <link rel="stylesheet" href="~/Content/assets/css/owl.css">
     <link rel="stylesheet" href="~/Content/assets/css/lightbox.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">
 
 
 
@@ -41,24 +44,24 @@
     <header class="main-header clearfix" role="heading">
         <div class="logo">
             <a href="@Url.Action("Index", "Home")"><em>Super Awesome</em> College</a>
-            
         </div>
         <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
         <nav id="menu" class="main-nav" role="navigation">
             <ul class="main-menu">
                 <li><a href="@Url.Action("Index", "Home")">Home</a></li>
+                @*<li><a href="@Url.Action("Index", "Home")">Home</a></li>*@
                 <li class="has-submenu">
-                    <a href="#section2">About Us</a>
+                    <a href="Index#section3">About Us</a>
                     <ul class="sub-menu">
                         <li><a href="#section2">Who we are?</a></li>
-                        <li><a href="#section3">What we do?</a></li>
-                        <li><a href="#section3">How it works?</a></li>
+                        <li><a href="Index#section3">What we do?</a></li>
+                        <li><a href="Index#section3">How it works?</a></li>
                     </ul>
                 </li>
                 <li><a href="#section4">Courses</a></li>
                 <!-- <li><a href="#section5">Video</a></li> -->
                 <li><a href="@Url.Action("Contact", "Home")">Contact</a></li>
-                <li>@Html.ActionLink("Contact", "Home", "Contact")</li>
+
                 <li class="has-submenu">
                     <a href="#section2">Link to Our Affiliates</a>
                     <ul class="sub-menu">
@@ -70,7 +73,7 @@
         </nav>
     </header>
 
-    @RenderBody();    
+    @RenderBody();
 
     <footer>
         <div class="container">
@@ -89,7 +92,7 @@
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
     <script src="~/vendor/jquery/jquery.min.js"></script>
-    <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="~/Content/assets/js/isotope.min.js"></script>
     <script src="~/Content/assets/js/owl-carousel.js"></script>
@@ -98,57 +101,73 @@
     <script src="~/Content/assets/js/video.js"></script>
     <script src="~/Content/assets/js/slick-slider.js"></script>
     <script src="~/Content/assets/js/custom.js"></script>
+
+    <!--datatables script-->
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.22/b-1.6.5/b-colvis-1.6.5/sp-1.2.1/datatables.min.js"></script>
     @RenderSection("scripts", false);
     <script>
-        //according to loftblog tut
-        $('.nav li:first').addClass('active');
+        ////according to loftblog tut
+        //$('.nav li:first').addClass('active');
 
-        var showSection = function showSection(section, isAnimate) {
-          var
-          direction = section.replace(/#/, ''),
-          reqSection = $('.section').filter('[data-section="' + direction + '"]'),
-          reqSectionPos = reqSection.offset().top - 0;
+        //var showSection = function showSection(section, isAnimate) {
+        //  var
+        //  direction = section.replace(/#/, ''),
+        //  reqSection = $('.section').filter('[data-section="' + direction + '"]'),
+        //  reqSectionPos = reqSection.offset().top - 0;
 
-          if (isAnimate) {
-            $('body, html').animate({
-              scrollTop: reqSectionPos },
-            800);
-          } else {
-            $('body, html').scrollTop(reqSectionPos);
-          }
+        //  if (isAnimate) {
+        //    $('body, html').animate({
+        //      scrollTop: reqSectionPos },
+        //    800);
+        //  } else {
+        //    $('body, html').scrollTop(reqSectionPos);
+        //  }
 
-        };
+        //};
 
-        var checkSection = function checkSection() {
-          $('.section').each(function () {
-            var
-            $this = $(this),
-            topEdge = $this.offset().top - 80,
-            bottomEdge = topEdge + $this.height(),
-            wScroll = $(window).scrollTop();
-            if (topEdge < wScroll && bottomEdge > wScroll) {
-              var
-              currentId = $this.data('section'),
-              reqLink = $('a').filter('[href*=\\#' + currentId + ']');
-              reqLink.closest('li').addClass('active').
-              siblings().removeClass('active');
-            }
-          });
-        };
+        //var checkSection = function checkSection() {
+        //  $('.section').each(function () {
+        //    var
+        //    $this = $(this),
+        //    topEdge = $this.offset().top - 80,
+        //    bottomEdge = topEdge + $this.height(),
+        //    wScroll = $(window).scrollTop();
+        //    if (topEdge < wScroll && bottomEdge > wScroll) {
+        //      var
+        //      currentId = $this.data('section'),
+        //      reqLink = $('a').filter('[href*=\\#' + currentId + ']');
+        //      reqLink.closest('li').addClass('active').
+        //      siblings().removeClass('active');
+        //    }
+        //  });
+        //};
 
-        $('.main-menu, .scroll-to-section').on('click', 'a', function (e) {
-          if($(e.target).hasClass('external')) {
-            return;
-          }
-          e.preventDefault();
-          $('#menu').removeClass('active');
-          showSection($(this).attr('href'), true);
-        });
+        //$('.main-menu, .scroll-to-section').on('click', 'a', function (e) {
+        //  if($(e.target).hasClass('external')) {
+        //    return;
+        //  }
+        //  e.preventDefault();
+        //  $('#menu').removeClass('active');
+        //  showSection($(this).attr('href'), true);
+        //});
+
+
 
         $(window).scroll(function () {
-          checkSection();
+            checkSection();
         });
+
+        // Data Tables Function
+        $(document).ready(function () {
+            $('#table_id').DataTable({
+                scrollY: "600px",
+                scrollCollapse: true,
+                searching: true,
+            });
+        });
+
+
+
     </script>
 </body>
 </html>
