--- a/SATPairedProgramming/SAT.UI.MVC/Views/StudentStatus/Index.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/StudentStatus/Index.cshtml
@@ -12,37 +12,39 @@
         @Html.ActionLink("Create New", "Create")
     </p>
 }
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.SSName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SSDescription)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<table class="table"  id="table_id">
+    <thead>
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.SSName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SSDescription)
-            </td>
-            <td>
-                @Html.ActionLink("Details", "Details", new { id = item.SSID })
-                @if (User.IsInRole("Admin"))
-                {
-                    <span>|</span>
-                    @Html.ActionLink("Delete", "Delete", new { id = item.SSID })
-                    <span>|</span>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.SSID })
-                }
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.SSName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SSDescription)
+            </th>
+            <th></th>
         </tr>
-    }
-
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SSName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SSDescription)
+                </td>
+                <td>
+                    @Html.ActionLink("Details", "Details", new { id = item.SSID })
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <span>|</span>
+                        @Html.ActionLink("Delete", "Delete", new { id = item.SSID })
+                        <span>|</span>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.SSID })
+                    }
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
