--- a/SATPairedProgramming/SAT.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/Shared/_Layout.cshtml
@@ -27,9 +27,7 @@
 
 
     @RenderSection("styles", false)
-    <!--
-
-    TemplateMo 557 Grad School
+    <!--    TemplateMo 557 Grad School
 
     https://templatemo.com/tm-557-grad-school
 
@@ -40,7 +38,7 @@
     <!--header-->
     <header class="main-header clearfix" role="heading">
         <div class="logo">
-            <a href="@Url.Action("Index", "Home")"><em>Super Awesome</em> College</a>
+            <a href="@Url.Action("Index", "Home")"><em>Super Awesome</em> College</a> <a href="@Url.Action()></a>"
             
         </div>
         <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
