--- a/SATPairedProgramming/SAT.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="~/Content/assets/css/templatemo-grad-school.css">
     <link rel="stylesheet" href="~/Content/assets/css/owl.css">
     <link rel="stylesheet" href="~/Content/assets/css/lightbox.css">
-
+    <link href="~/Content/assets/css/custom.css" rel="stylesheet" />
 
 
     @RenderSection("styles", false)
@@ -38,39 +38,55 @@
     <!--header-->
     <header class="main-header clearfix" role="heading">
         <div class="logo">
-            <a href="@Url.Action("Index", "Home")"><em>Super Awesome</em> College</a> <a href="@Url.Action()></a>"
-            
+            <a href="@Url.Action("Index", "Home")"><em>Super Awesome</em> College</a>
         </div>
         <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
         <nav id="menu" class="main-nav" role="navigation">
             <ul class="main-menu">
-                <li><a href="@Url.Action("Index", "Home")">Home</a></li>
+                <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li class="has-submenu">
                     <a href="#section2">About Us</a>
                     <ul class="sub-menu">
-                        <li><a href="#section2">Who we are?</a></li>
-                        <li><a href="#section3">What we do?</a></li>
-                        <li><a href="#section3">How it works?</a></li>
+                        <li><a href="#section2">Why Choose Us?</a></li>
+                        <li><a href="#section3">Sign Up Now!</a></li>
+                        <li><a href="#section3">Choose a Course</a></li>
                     </ul>
                 </li>
-                <li><a href="#section4">Courses</a></li>
+                <li>@Html.ActionLink("Courses", "Index", "Cours")</li>
                 <!-- <li><a href="#section5">Video</a></li> -->
-                <li><a href="@Url.Action("Contact", "Home")">Contact</a></li>
-                <li>@Html.ActionLink("Contact", "Home", "Contact")</li>
+                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 <li class="has-submenu">
-                    <a href="#section2">Link to Our Affiliates</a>
+                    <a href="#section2">Links</a>
                     <ul class="sub-menu">
                         <li><a href="http://www.chadway.net" target="_blank" rel="sponsored" class="external">Chad Way</a></li>
                         <li><a href="http://www.reedcoding.com" target="_blank" rel="sponsored" class="external">Deborah Reed</a></li>
                     </ul>
+                <li class="has-submenu">
+                    @Html.ActionLink("Login", "Login", "Account")
+                    @if ((User.IsInRole("Admin") || User.IsInRole("Scheduler")) && Request.IsAuthenticated)
+                    {
+                    <ul class="sub-menu">
+                        <li>@Html.ActionLink("Admin Menu", "AdminMenu", "Home")</li>
+                        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+                        {
+                            @Html.AntiForgeryToken()
+
+                            @*<ul class="nav navbar-nav navbar-right">*@
+                            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                            @*</ul>*@
+                        }
+                    </ul>
+                    }
                 </li>
-            </ul>
-        </nav>
+
+
+</nav>
     </header>
 
-    @RenderBody();    
+    @RenderBody()
 
-    <footer>
+    <div class="clearfix"></div>
+    <footer id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -83,6 +99,7 @@
             </div>
         </div>
     </footer>
+
 
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
@@ -97,55 +114,56 @@
     <script src="~/Content/assets/js/slick-slider.js"></script>
     <script src="~/Content/assets/js/custom.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.22/b-1.6.5/b-colvis-1.6.5/sp-1.2.1/datatables.min.js"></script>
-    @RenderSection("scripts", false);
+    @RenderSection("scripts", false)
     <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
 
         var showSection = function showSection(section, isAnimate) {
-          var
-          direction = section.replace(/#/, ''),
-          reqSection = $('.section').filter('[data-section="' + direction + '"]'),
-          reqSectionPos = reqSection.offset().top - 0;
+            var
+                direction = section.replace(/#/, ''),
+                reqSection = $('.section').filter('[data-section="' + direction + '"]'),
+                reqSectionPos = reqSection.offset().top - 0;
 
-          if (isAnimate) {
-            $('body, html').animate({
-              scrollTop: reqSectionPos },
-            800);
-          } else {
-            $('body, html').scrollTop(reqSectionPos);
-          }
+            if (isAnimate) {
+                $('body, html').animate({
+                    scrollTop: reqSectionPos
+                },
+                    800);
+            } else {
+                $('body, html').scrollTop(reqSectionPos);
+            }
 
         };
 
         var checkSection = function checkSection() {
-          $('.section').each(function () {
-            var
-            $this = $(this),
-            topEdge = $this.offset().top - 80,
-            bottomEdge = topEdge + $this.height(),
-            wScroll = $(window).scrollTop();
-            if (topEdge < wScroll && bottomEdge > wScroll) {
-              var
-              currentId = $this.data('section'),
-              reqLink = $('a').filter('[href*=\\#' + currentId + ']');
-              reqLink.closest('li').addClass('active').
-              siblings().removeClass('active');
-            }
-          });
+            $('.section').each(function () {
+                var
+                    $this = $(this),
+                    topEdge = $this.offset().top - 80,
+                    bottomEdge = topEdge + $this.height(),
+                    wScroll = $(window).scrollTop();
+                if (topEdge < wScroll && bottomEdge > wScroll) {
+                    var
+                        currentId = $this.data('section'),
+                        reqLink = $('a').filter('[href*=\\#' + currentId + ']');
+                    reqLink.closest('li').addClass('active').
+                        siblings().removeClass('active');
+                }
+            });
         };
 
-        $('.main-menu, .scroll-to-section').on('click', 'a', function (e) {
-          if($(e.target).hasClass('external')) {
-            return;
-          }
-          e.preventDefault();
-          $('#menu').removeClass('active');
-          showSection($(this).attr('href'), true);
-        });
+        //$('.main-menu, .scroll-to-section').on('click', 'a', function (e) {
+        //  if($(e.target).hasClass('external')) {
+        //    return;
+        //  }
+        //  e.preventDefault();
+        //  $('#menu').removeClass('active');
+        //  showSection($(this).attr('href'), true);
+        //});
 
         $(window).scroll(function () {
-          checkSection();
+            checkSection();
         });
     </script>
 </body>
