--- a/SATPairedProgramming/SAT.UI.MVC/Views/ScheduledClassStatus/Index.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/ScheduledClassStatus/Index.cshtml
@@ -12,13 +12,16 @@
         @Html.ActionLink("Create New", "Create")
     </p>
 }
-<table class="table">
+<table class="table" id="table_id">
+    <thead>
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.SCSName)
         </th>
         <th></th>
     </tr>
+        </thead>
+    <tbody>
 
     @foreach (var item in Model)
     {
@@ -37,5 +40,5 @@
             </td>
         </tr>
     }
-
+        </tbody>
 </table>
