--- a/SATPairedProgramming/SAT.UI.MVC/Views/Cours/CourseTiles.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/Cours/CourseTiles.cshtml
@@ -3,8 +3,24 @@
 @{
     ViewBag.Title = "Index";
 }
+<div class="padder"></div>
+<div class="container clearfix">
+<h2 class="centerme">Courses</h2>
+<div></div>
+<div class="row centerme">
+    @if (User.IsInRole("Admin") && Request.IsAuthenticated)
+    {
 
-<h2>Courses</h2>
+        <div class="col-md-6">
+            @Html.ActionLink("Create New", "Create", "Cours", null, new { @class = "btn btn-secondary" })
+        </div>
+
+    }
+
+    <div class="col-md-6">
+        @Html.ActionLink("Table View", "Index", "Cours", null, new { @class = "btn btn-secondary" })
+    </div>
+</div>
 
 
 @foreach (var item in Model)
@@ -26,7 +42,7 @@
         </div>
     </div>
 }
-
+</div>
 
 
 
