--- a/SATPairedProgramming/SAT.UI.MVC/Views/Home/AdminMenu.cshtml
+++ b/SATPairedProgramming/SAT.UI.MVC/Views/Home/AdminMenu.cshtml
@@ -12,6 +12,7 @@
         <li>@Html.ActionLink("Courses", "Index", "Cours")</li>
         <!-- <li><a href="#section5">Video</a></li> -->
         <li>@Html.ActionLink("Roles Admin", "Index", "RolesAdmin")</li>
+        <li>@Html.ActionLink("Enrollments", "Index", "Enrollments")</li>
         <li>@Html.ActionLink("Scheduled Classes", "Index", "ScheduledClasses")</li>
         <li>@Html.ActionLink("Scheduled Class Statuses", "Index", "ScheduledClassStatus")</li>
         <li>@Html.ActionLink("Students", "Index", "Students")</li>
